# csv-consolidator

./: README.md  main.py  pyproject.toml
modules/: chart.py  csv.py  output_format.py
specs/: consolidator-spec.md
tests/: output_format.py
